<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background"
   >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBackgroundProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_198dp"
            android:contentDescription="@string/txt_image_view"
            android:src="@drawable/navheader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_130dp"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/_130dp"
            android:contentDescription="@string/txt_image_view"
            android:src="@drawable/profile_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBackgroundProfile" />

        <TextView
            android:id="@+id/tvNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_jabel"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile" />

        <TextView
            android:id="@+id/tvCareerProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_career"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameProfile" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvLinkedinProfile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareerProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_image_view"
                    android:src="@drawable/linkedin" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvGithubProfile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@id/cvLinkedinProfile"
            app:layout_constraintEnd_toStartOf="@id/cvemailProfile"
            app:layout_constraintStart_toEndOf="@id/cvLinkedinProfile"
            app:layout_constraintTop_toTopOf="@+id/cvLinkedinProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_image_view"
                    android:src="@drawable/github" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvemailProfile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cvGithubProfile"
            app:layout_constraintEnd_toStartOf="@id/cvphoneProfile"
            app:layout_constraintStart_toEndOf="@id/cvGithubProfile"
            app:layout_constraintTop_toTopOf="@id/cvGithubProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_image_view"
                    android:src="@drawable/mail" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvphoneProfile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/orange"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@id/cvemailProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvemailProfile"
            app:layout_constraintTop_toTopOf="@id/cvemailProfile">

            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="56dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:contentDescription="@string/txt_image_view"
                    android:src="@drawable/chat" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:layout_marginTop="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:id="@+id/cvAbout"
            app:layout_constraintTop_toBottomOf="@id/cvGithubProfile"
            app:cardCornerRadius="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_about"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/tvAboutTitle"/>

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/tvContentAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_content" />
                </androidx.core.widget.NestedScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>